# midichkr

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
